# AIInference

./: .gitignore  CMakeLists.txt  README.md  logs.txt  profile.sh  run.sh
.github/workflows/: ci.yml  tsan_suppressions.txt
benchmarks/: CMakeLists.txt  benchmark_matrix_add.cpp  benchmark_matrix_inverse.cpp  benchmark_matrix_mult.cpp  benchmark_matrix_transpose.cpp
include/: basic_tensor.h  basic_tensors.h  fast_tensor.h  itensor.h  parse_safetensors.h  tensor.h  tensors.h  threadpool.h  threadsafe_queue.h
include/strategies/: basic_simd_tensor_strategy.h  basic_tensor_strategy.h  blocked_simd_tensor_strategy.h  concurrent_blocked_tensor_strategy.h  concurrent_row_tensor_strategy.h  concurrent_tensor_strategy.h  kernel.h  optimised_tensor_strategy.h  simd_tensor_strategy.h  tensor_strategy.h
src/: basic_tensors.cpp  main.cpp  parse_safetensors.cpp  run_basic_tensors.cpp  tensors.cpp  threadsafe_queue.cpp
src/tensors/: basic_tensor.cpp  fast_tensor.cpp  itensor.cpp  tensor.cpp  threadpool.cpp  threadsafe_queue.cpp
src/tensors/strategies/: basic_simd_tensor_strategy.cpp  basic_tensor_strategy.cpp  blocked_simd_tensor_strategy.cpp  concurrent_blocked_tensor_strategy.cpp  concurrent_row_tensor_strategy.cpp  concurrent_tensor_strategy.cpp  kernel.cpp  optimised_tensor_strategy.cpp  simd_tensor_strategy.cpp  tensor_strategy.cpp
tests/: CMakeLists.txt  test_file_parsing.cpp  test_matrix_add.cpp  test_matrix_inverse.cpp  test_matrix_mult.cpp  test_matrix_subtract.cpp  test_matrix_transpose.cpp  test_scalar_ops.cpp  test_threadpool.cpp
